# rules_agents

./: .bazelignore  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  rules_agents spec.md
agent/: BUILD.bazel  dev.sh
ai/: dev_doctor.sh
bcr/modules/rules_agents/: metadata.json
bcr/modules/rules_agents/0.1.0/: presubmit.yml  source.json
bcr/test_module/: BUILD.bazel  MODULE.bazel  fake_claude.sh  fake_codex.sh  smoke_test.py
bcr/test_module/skills/repo_helper/: SKILL.md
catalog/: BUILD.bazel  registries.json  registries.schema.json
examples/: BUILD.bazel  fake_claude.sh  fake_codex.sh
examples/skills/hello_world/: SKILL.md
examples/skills/repo_helper/: SKILL.md
rules_agents/: BUILD.bazel  defs.bzl  extensions.bzl  list_skills.sh  list_skills.sh.tpl
rules_agents/private/: launcher_binary.bzl  profile.bzl  profile_artifact_rule.bzl  profile_manifest_rule.bzl  profile_v2.bzl  providers.bzl  runfiles_path.bzl  runner.bzl  runner_manifest_rule.bzl  script_binary.bzl  skill_rule.bzl
rules_agents/runtime/: BUILD.bazel  launcher.py
skills/: BUILD.bazel
skills/rules_agents/: SKILL.md
skills/rules_agents/references/: quickstart.md  usage.md
skills/rules_agents_repo_guide/: SKILL.md
skills/rules_agents_usage/: SKILL.md
spec/: profile_runner.md  skill_catalog.md  v1.md  v2.md
tests/: BUILD.bazel  bzlmod_git_override_test.sh  catalog_defaults_test.sh  doctor_test.sh  install_start_test.sh  missing_skill_md_test.sh  quickstart_archive_layout_test.sh  registry_discovery_test.sh  remote_skill_deps_test.sh  repo_smoke_test.sh  test_rules.bzl  update_registries_test.sh
tests/fixtures/registry_repo/python/: SKILL.md
tests/fixtures/registry_repo/typescript/: SKILL.md
tests/fixtures/registry_repo_alt/go_helper/: SKILL.md
tests/fixtures/remote_repo_dirs/bazel_debug/: SKILL.md
tests/fixtures/remote_repo_dirs/test_runner/: SKILL.md
tests/fixtures/remote_repo_mixed/: SKILL.md
tests/fixtures/remote_repo_mixed/1password/advanced/: SKILL.md
tests/fixtures/remote_repo_root/: SKILL.md
tests/fixtures/remote_repo_root_and_child/child_skill/: SKILL.md
tests/fixtures/remote_repo_root_and_child/child_skill/nested_child_skill/: SKILL.md
tests/invalid/: BUILD.bazel
tests/invalid/missing_skill/: README.txt
tools/: BUILD.bazel  list_skills_lib.py  update_registries.py
