package(default_visibility = ["//visibility:public"])

alias(
    name = "dev",
    actual = "//examples:dev_profile",
)

alias(
    name = "dev_doctor",
    actual = "//examples:dev_profile_doctor",
)

alias(
    name = "dev_manifest",
    actual = "//examples:dev_profile_manifest",
)

alias(
    name = "claude_dev",
    actual = "//examples:claude_profile",
)

alias(
    name = "claude_dev_doctor",
    actual = "//examples:claude_profile_doctor",
)

alias(
    name = "claude_dev_manifest",
    actual = "//examples:claude_profile_manifest",
)
