package(default_visibility = ["//visibility:public"])

alias(
    name = "dev",
    actual = "//examples:codex_dev",
)

alias(
    name = "dev_doctor",
    actual = "//examples:codex_dev_doctor",
)

alias(
    name = "dev_manifest",
    actual = "//examples:repo_dev_profile_manifest",
)

alias(
    name = "claude_dev",
    actual = "//examples:claude_dev",
)

alias(
    name = "claude_dev_doctor",
    actual = "//examples:claude_dev_doctor",
)

alias(
    name = "claude_dev_manifest",
    actual = "//examples:claude_dev_profile_manifest",
)

alias(
    name = "claude_dev_auth",
    actual = "//examples:claude_dev_auth",
)

alias(
    name = "claude_dev_auth_doctor",
    actual = "//examples:claude_dev_auth_doctor",
)

alias(
    name = "claude_dev_auth_manifest",
    actual = "//examples:claude_dev_profile_auth_manifest",
)
