package(default_visibility = ["//visibility:public"])

load("//rules_agents:defs.bzl", "agent_profile", "agent_skill")
load("//rules_agents/private:launcher_binary.bzl", "launcher_binary")

agent_skill(
    name = "repo_helper",
    root = "skills/repo_helper",
    srcs = glob(["skills/repo_helper/**"], exclude_directories = 1),
)

agent_skill(
    name = "hello_world",
    root = "skills/hello_world",
    srcs = glob(["skills/hello_world/**"], exclude_directories = 1),
)

agent_profile(
    name = "dev_profile",
    agent = "codex",
    skills = [":repo_helper"],
    credential_env = ["OPENAI_API_KEY"],
)

launcher_binary(
    name = "dev_profile_install",
    manifest = ":dev_profile_manifest",
    subcommand = "install",
)

agent_profile(
    name = "dev_profile_extra",
    agent = "codex",
    skills = [
        ":repo_helper",
        ":hello_world",
    ],
    credential_env = ["OPENAI_API_KEY"],
)

launcher_binary(
    name = "dev_profile_extra_install",
    manifest = ":dev_profile_extra_manifest",
    subcommand = "install",
)

agent_profile(
    name = "claude_profile",
    agent = "claude_code",
    skills = [":repo_helper"],
    credential_env = ["ANTHROPIC_API_KEY"],
)

launcher_binary(
    name = "claude_profile_install",
    manifest = ":claude_profile_manifest",
    subcommand = "install",
)

exports_files([
    "fake_claude.sh",
    "fake_codex.sh",
])
