package(default_visibility = ["//visibility:public"])

load("//rules_agents:defs.bzl", "agent_profile", "agent_runner", "agent_skill")

agent_skill(
    name = "repo_helper",
    root = "skills/repo_helper",
    srcs = glob(["skills/repo_helper/**"], exclude_directories = 1),
)

agent_skill(
    name = "hello_world",
    root = "skills/hello_world",
    srcs = glob(["skills/hello_world/**"], exclude_directories = 1),
)

agent_profile(
    name = "repo_dev_profile",
    skills = [":repo_helper"],
)

agent_runner(
    name = "codex_dev",
    profile = ":repo_dev_profile",
    runner = "codex",
)

agent_profile(
    name = "repo_dev_profile_extra",
    skills = [
        ":repo_helper",
        ":hello_world",
    ],
)

agent_runner(
    name = "codex_dev_extra",
    profile = ":repo_dev_profile_extra",
    runner = "codex",
)

agent_profile(
    name = "claude_dev_profile",
    skills = [":repo_helper"],
    credential_env = ["ANTHROPIC_API_KEY"],
)

agent_runner(
    name = "claude_dev",
    profile = ":claude_dev_profile",
    runner = "claude_code",
)

exports_files([
    "fake_claude.sh",
    "fake_codex.sh",
])
