package(default_visibility = ["//visibility:public"])

load("//rules_agents:defs.bzl", "agent_skill")

agent_skill(
    name = "rules_agents_repo_guide",
    root = "rules_agents_repo_guide",
    srcs = glob(["rules_agents_repo_guide/**"], exclude_directories = 1),
)

agent_skill(
    name = "rules_agents_usage",
    root = "rules_agents_usage",
    srcs = glob(["rules_agents_usage/**"], exclude_directories = 1),
)
