package(default_visibility = ["//visibility:public"])

load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "doctor_test",
    srcs = ["doctor_test.sh"],
    size = "small",
    data = [
        "//examples:codex_dev_doctor",
    ],
)

sh_test(
    name = "install_start_test",
    srcs = ["install_start_test.sh"],
    size = "small",
    data = [
        "//examples:claude_dev_run",
        "//examples:claude_dev_setup",
        "//examples:codex_dev_doctor",
        "//examples:codex_dev_setup",
        "//examples:codex_dev_extra_setup",
        "//examples:codex_dev_run",
        "//examples:fake_claude.sh",
        "//examples:fake_codex.sh",
    ],
)
