package(default_visibility = ["//visibility:public"])

load("@rules_shell//shell:sh_test.bzl", "sh_test")

filegroup(
    name = "fixture_files",
    srcs = glob(["fixtures/**/*"]),
)

sh_test(
    name = "bzlmod_git_override_test",
    srcs = ["bzlmod_git_override_test.sh"],
    size = "medium",
    data = [
        "//:repo_files",
        ":fixture_files",
    ],
)

sh_test(
    name = "catalog_defaults_test",
    srcs = ["catalog_defaults_test.sh"],
    size = "small",
    data = [
        "//catalog:registries.json",
    ],
)

sh_test(
    name = "doctor_test",
    srcs = ["doctor_test.sh"],
    size = "small",
    data = [
        "//examples:claude_dev_auth_doctor",
        "//examples:codex_dev_doctor",
    ],
)

sh_test(
    name = "install_start_test",
    srcs = ["install_start_test.sh"],
    size = "small",
    data = [
        "//examples:claude_dev_auth_run",
        "//examples:claude_dev_auth_setup",
        "//examples:claude_dev_run",
        "//examples:claude_dev_setup",
        "//examples:codex_dev_doctor",
        "//examples:codex_dev_setup",
        "//examples:codex_dev_extra_setup",
        "//examples:codex_dev_run",
        "//examples:fake_claude.sh",
        "//examples:fake_codex.sh",
    ],
)

sh_test(
    name = "registry_discovery_test",
    srcs = ["registry_discovery_test.sh"],
    size = "medium",
    data = [
        "//:repo_files",
        ":fixture_files",
    ],
)

sh_test(
    name = "remote_skill_deps_test",
    srcs = ["remote_skill_deps_test.sh"],
    size = "medium",
    data = [
        "//:repo_files",
        ":fixture_files",
    ],
)

sh_test(
    name = "repo_smoke_test",
    srcs = ["repo_smoke_test.sh"],
    size = "medium",
    data = [
        "//:repo_files",
        ":fixture_files",
        "//examples:fake_claude.sh",
        "//examples:fake_codex.sh",
    ],
)

sh_test(
    name = "update_registries_test",
    srcs = ["update_registries_test.sh"],
    size = "small",
    data = [
        "//tools:update_registries",
    ],
)
